test_output.txt
cargo :    Compiling phantom-overlay v0.3.0 (C:\Users\SANDIP\Desktop\Memory\KairoPhantom\phantom-overlay\src-tauri)
At line:1 char:1
+ cargo test --lib 2>&1 | Out-File "test_output.txt" -Encoding utf8; Ge ...
+ ~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling ph...rlay\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   Compiling phantom-core v0.3.0 (C:\Users\SANDIP\Desktop\Memory\KairoPhantom\phantom-core)
warning: unused import: `TrayIconEvent`
 --> phantom-overlay\src-tauri\src\lib.rs:6:29
  |
6 |     tray::{TrayIconBuilder, TrayIconEvent},
  |                             ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: field `word_count` is never read
  --> phantom-overlay\src-tauri\src\phantom_bridge.rs:18:5
   |
16 | struct MaterializeResponse {
   |        ------------------- field in this struct
17 |     suggestion: String,
18 |     word_count: usize,
   |     ^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: associated function `ping` is never used
  --> phantom-overlay\src-tauri\src\phantom_bridge.rs:42:18
   |
23 | impl PhantomBridge {
   | ------------------ associated function in this implementation
...
42 |     pub async fn ping() -> bool {
   |                  ^^^^

warning: `phantom-overlay` (lib test) generated 3 warnings (run `cargo fix --lib -p phantom-overlay --tests` to apply 
1 suggestion)
   Compiling kairo-agent-sdk v0.1.0 (C:\Users\SANDIP\Desktop\Memory\KairoPhantom\kairo-agent-sdk)
error[E0425]: cannot find function `add_to_linker` in crate `wasmtime_wasi`
  --> kairo-agent-sdk\src\sandbox.rs:22:24
   |
22 |         wasmtime_wasi::add_to_linker(&mut linker, |s| s)?;
   |                        ^^^^^^^^^^^^^ not found in `wasmtime_wasi`

warning: unused import: `Path`
 --> kairo-agent-sdk\src\agent_registry.rs:1:17
  |
1 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `WasiCtx`
 --> kairo-agent-sdk\src\sandbox.rs:2:37
  |
2 | use wasmtime_wasi::{WasiCtxBuilder, WasiCtx};
  |                                     ^^^^^^^

error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> kairo-agent-sdk\src\sandbox.rs:24:20
   |
24 |           let wasi = WasiCtxBuilder::new()
   |  ____________________^
25 | |             .env("PROMPT", input_prompt)?
   | |_________________________________________^ the `?` operator cannot be applied to type `&mut WasiCtxBuilder`
   |
   = help: the nightly-only, unstable trait `Try` is not implemented for `&mut WasiCtxBuilder`

error[E0382]: borrow of moved value: `dir`
  --> kairo-agent-sdk\src\agent_registry.rs:80:27
   |
53 |             let mut watcher = notify::recommended_watcher(move |res: notify::Result<Event>| {
   |                                                           --------------------------------- value moved into 
closure here
...
58 |                         if let Ok(entries) = fs::read_dir(&dir) {
   |                                                            --- variable moved due to use in closure
...
80 |             watcher.watch(&dir, RecursiveMode::Recursive).unwrap();
   |                           ^^^^ value borrowed here after move
   |
   = note: move occurs because `dir` has type `PathBuf`, which does not implement the `Copy` trait
   = note: borrow occurs due to deref coercion to `Path`

warning: unused variable: `event`
  --> kairo-agent-sdk\src\agent_registry.rs:55:24
   |
55 |                     Ok(event) => {
   |                        ^^^^^ help: if this is intentional, prefix it with an underscore: `_event`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, E0382, E0425.
For more information about an error, try `rustc --explain E0277`.
warning: `kairo-agent-sdk` (lib test) generated 3 warnings
error: could not compile `kairo-agent-sdk` (lib test) due to 3 previous errors; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
